--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Hello coursera</title>
   </head>
   <body>
-    <h1>Hello coursera students !</h1>
+    <h1>Hello coursera students ! v2</h1>
   </body>
 </html>
